继续测试posstcss相关插件

--- a/src/index.html
+++ b/src/index.html
@@ -24,15 +24,27 @@
         <br/> 共建行业闭环生态，互利共赢
       </p>
     </div>
-  </div>
-  <div class="section">
-    <div class="hd">
-      <span>这是一个头</span>
+
+    <div class="section">
+      <div class="hd">
+        <span class="mark">场景合作</span>
+        <span class="mark-sub">将金融服务能力植入行业场景，深度连接，普惠金融</span>
+      </div>
+      <div class="bd">
+        <ul class="catis-list">
+          <li><a href="#"><span class="iconfont icon-yiliaojiankang"></span><span class="cati-name">医疗健康</span></a></li>
+          <li><a href="#"><span class="iconfont icon-lvyou"></span><span class="cati-name">旅游</span></a></li>
+          <li><a href="#"><span class="iconfont icon-jiaoyu"></span><span class="cati-name">教育</span></a></li>
+          <li><a href="#"><span class="iconfont icon-OO"></span><span class="cati-name">O2O</span></a></li>
+          <li><a href="#"><span class="iconfont icon-jinrong"></span><span class="cati-name">金融理财</span></a></li>
+          <li><a href="#"><span class="iconfont icon-zhineng"></span><span class="cati-name">智能硬件</span></a></li>
+          <li><a href="#"><span class="iconfont icon-jiacai"></span><span class="cati-name">家财</span></a></li>
+          <li><a href="#"><span class="iconfont icon-gengduo"></span><span class="cati-name">更多</span></a></li>
+        </ul>
+      </div>
     </div>
-    <div class="bd">
-      <p class="multiline">this is a container</p>
-    </div>
   </div>
+
   <script src="../dist/index.js"></script>
   <script>
     $(document).ready(function () {
