思考如何解决1px像素的边框问题

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>这是一个用于测试的页面</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no"> -->
   <script src="../node_modules/amfe-flexible/index.js"></script>
   <link rel="stylesheet" href="../dist/index.css">
 </head>
@@ -41,6 +42,32 @@
           <li><a href="#"><span class="iconfont icon-jiacai"></span><span class="cati-name">家财</span></a></li>
           <li><a href="#"><span class="iconfont icon-gengduo"></span><span class="cati-name">更多</span></a></li>
         </ul>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="hd">
+        <span class="mark">测试区域</span>
+        <span class="mark-sub">各种测试代码聚合</span>
+      </div>
+      <div class="bd">
+        <div class="test-area">
+          <p>测试postcss-property-lookup继承该选择期内值,并通过cssnano进行calc计算的圆形,是否被px转换成rem</p>
+          <div class="test-radius"></div>
+        </div>
+        <div class="test-area">
+          <a href="javascript:;" class="pic-txts">
+            
+          </a>
+        </div>
+        <div class="test-area">
+          <canvas></canvas>
+        </div>
+        <div class="test-area">
+          <svg viewbox="0,0,300,300" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="150" cy="150" r="100"></circle>
+          </svg>
+        </div>
       </div>
     </div>
   </div>
